--- a/murlikitas/templates/euskal/status.html
+++ b/murlikitas/templates/euskal/status.html
@@ -2,12 +2,13 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Map Status</title>
+    <title>Estado de los sitios</title>
 </head>
 <body>
-{% for member in list %}
-Nombre: {{ member.name }} ||| Izq: {{ member.left_locked }} ||| Der: {{ member.right_locked }}<br>
-{% endfor %}
+<h1>Estado de sitios</h1>
 
+<h2 style="color:red">En construcción...</h2>
+
+<a href="/euskal/">Volver al inicio</a>
 </body>
 </html>
