--- a/murlikitas/templates/euskal/login.html
+++ b/murlikitas/templates/euskal/login.html
@@ -9,13 +9,14 @@
 
 <form id="login_form" method="post" action="/euskal/login/">
     {% csrf_token %}
-    Username: <input type="text" name="username" value="" size="50"> <br><br>
-    Password: <input type="password" name="password" value="" size="50"> <br><br>
+    Usuario: <input type="text" name="username" value="" size="50"> <br><br>
+    Contraseña: <input type="password" name="password" value="" size="50"> <br><br>
 
-    <input type="submit" name="submit" value="Submit"> {{ invalid }}
+    <input type="submit" name="submit" value="Login"> {{ invalid }}
 
 </form>
-
+<br>
+<a href="/euskal/">Volver al inicio</a>
 
 </body>
 </html>
