--- a/murlikitas/templates/euskal/register.html
+++ b/murlikitas/templates/euskal/register.html
@@ -2,20 +2,47 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Register</title>
+    <title>Registrarse</title>
 </head>
 <body>
+<h1>Registrarse</h1>
 {% if registered %}
-Registered successfully!
-<a href="/euskal/login/">Back to login!</a><br>
+Registro correcto!<br><br>
+<a href="/euskal/login/">Loguearse</a><br>
 {% else %}
 <form id="user_form" method="post" action="/euskal/register/" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ user_form.as_p }}
 
-    <input type="submit" name="submit" value="Submit">
+    <h2>Datos de cuenta</h2>
+
+    {{ user_form.non_field_errors }}
+    <p>{{ user_form.username.errors }}
+    <label>Nombre de usuario en Euskal.org:</label>
+    {{ user_form.username }}</p>
+
+    <p>{{ user_form.password.errors }}
+    <label>Contraseña:</label>
+    {{ user_form.password }}</p>
+
+    <p>{{ user_form.email.errors }}
+    <label>Email:</label>
+    {{ user_form.email }}</p>
+
+    <h2>Datos reales</h2>
+
+    <p>{{ user_form.first_name.errors }}
+    <label>Nombre:</label>
+    {{ user_form.first_name }}</p>
+
+    <p>{{ user_form.last_name.errors }}
+    <label>Primer apellido:</label>
+    {{ user_form.last_name }}</p>
+
+    <input type="submit" name="submit" value="Registrarse">
 {% endif %}
 </form>
+<br>
+<a href="/euskal/">Volver al inicio</a>
 
 
 </body>
