Implementing algorithm. Added option to vote the name group.

--- a/murlikitas/templates/euskal/register.html
+++ b/murlikitas/templates/euskal/register.html
@@ -17,6 +17,7 @@ Registro correcto!<br><br>
 
     {{ user_form.non_field_errors }}
     <p>{{ user_form.username.errors }}
+    <code>(Este es el nombre de usuario que utilizaras para acceder a este sitio. Sensible a las mayusculas.)</code><br>
     <label>Nombre de usuario en Euskal.org:</label>
     {{ user_form.username }}</p>
 
