--- a/murlikitas/templates/euskal/dashboard.html
+++ b/murlikitas/templates/euskal/dashboard.html
@@ -7,6 +7,7 @@
 <body>
 <h1>DASHBOARD</h1>
 <h2>Hola {{ user.first_name }} {{ user.last_name }} &lt {{ user.username }} &gt!</h2>
+<a href="/euskal/vote-group-name/">Votar nombre del grupo</a><br>
 <a href="/euskal/preferences/">Elegir preferencias</a><br>
 <a href="/euskal/status/">Ver estado del mapa</a><br><br>
 <a href="/euskal/logout/">Cerrar sesión</a><br>
