Update project directory

--- a/templates/euskal/index.html
+++ b/templates/euskal/index.html
@@ -8,10 +8,10 @@
 <div style="text-align: center">
     <h1>PAGINA PRINCIPAL MURKILITAS</h1>
 
-    <h2><a href="/euskal/login/">Login</a></h2>
-    (¿No tienes una cuenta? <a href="/euskal/register/">Registrate</a>)<br><br>
+    <h2><a href="/login/">Login</a></h2>
+    (¿No tienes una cuenta? <a href="/register/">Registrate</a>)<br><br>
 
-    <h2><a href="/euskal/status/">Ver estado del mapa</a></h2>
+    <h2><a href="/status/">Ver estado del mapa</a></h2>
 </div>
 </body>
 </html>
