--- a/templates/euskal/status.html
+++ b/templates/euskal/status.html
@@ -9,6 +9,6 @@
 
 <h2 style="color:red">En construcción...</h2>
 
-<a href="/euskal/">Volver al inicio</a>
+<a href="/">Volver al inicio</a>
 </body>
 </html>
