--- a/templates/euskal/votingresults.html
+++ b/templates/euskal/votingresults.html
@@ -13,6 +13,6 @@
 
 <br><code>(Los resultados pueden variar durante los proximos dias)</code>
 
-<br><br><a href="/euskal/">Volver al inicio</a>
+<br><br><a href="/">Volver al inicio</a>
 </body>
 </html>
