--- a/templates/euskal/dashboard.html
+++ b/templates/euskal/dashboard.html
@@ -8,12 +8,12 @@
 <h1>DASHBOARD</h1>
 <h2>Hola {{ user.first_name }} {{ user.last_name }} &lt {{ user.username }} &gt!</h2>
 {% if up.has_voted_group_name %}
-<a href="/euskal/voting-results">Ver resultados de la votación</a><br>
+<a href="/voting-results">Ver resultados de la votación</a><br>
 {% else %}
-<a href="/euskal/vote-group-name/">Votar nombre del grupo</a><br>
+<a href="/vote-group-name/">Votar nombre del grupo</a><br>
 {% endif %}
-<a href="/euskal/preferences/">Elegir preferencias</a><br>
-<a href="/euskal/status/">Ver estado del mapa</a><br><br>
-<a href="/euskal/logout/">Cerrar sesión</a><br>
+<a href="/preferences/">Elegir preferencias</a><br>
+<a href="/status/">Ver estado del mapa</a><br><br>
+<a href="/logout/">Cerrar sesión</a><br>
 </body>
 </html>
