--- a/templates/euskal/login.html
+++ b/templates/euskal/login.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Login</h1>
 
-<form id="login_form" method="post" action="/euskal/login/">
+<form id="login_form" method="post" action="/login/">
     {% csrf_token %}
     Usuario: <input type="text" name="username" value="" size="50"> <br><br>
     Contraseña: <input type="password" name="password" value="" size="50"> <br><br>
@@ -16,7 +16,7 @@
 
 </form>
 <br>
-<a href="/euskal/">Volver al inicio</a>
+<a href="/">Volver al inicio</a>
 
 </body>
 </html>
